# rules_js

./: .bazelrc  BUILD.bazel  MODULE.bazel  WORKSPACE
.github/workflows/: ci.yaml  workspace_snippet.sh
e2e/bzlmod/: .bazelrc  BUILD.bazel  MODULE.bazel
js/: extensions.bzl
