module(
    name = "e2e_bzlmod",
    version = "0.0.0",
    compatibility_level = 1,
    toolchains_to_register = ["@yq_toolchains//:all"],
)

bazel_dep(name = "aspect_rules_js", version = "0.0.0")
bazel_dep(name = "aspect_bazel_lib", version = "0.11.0")

local_path_override(
    module_name = "aspect_rules_js",
    path = "../..",
)

ext = use_extension("@aspect_bazel_lib//lib:extensions.bzl", "ext")
use_repo(ext, "yq")
use_repo(ext, "yq_toolchains")

npm = use_extension("@aspect_rules_js//js:extensions.bzl", "npm", dev_dependency = True)
npm.pnpm_lock(
    name = "npm",
    pnpm_lock = "//:pnpm-lock.yaml",
)

use_repo(npm, "npm")
